--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
-  "buildCommand": "pnpm turbo run build",
-  "installCommand": "pnpm install",
+  "buildCommand": "pnpm turbo run build --filter=@moxmuse/web",
+  "installCommand": "pnpm install --frozen-lockfile --prefer-offline",
   "framework": null,
   "outputDirectory": "apps/web/.next",
   "ignoreCommand": "git diff HEAD^ HEAD --quiet .",
   "env": {
-    "PNPM_VERSION": "8.14.0"
+    "PNPM_VERSION": "8.14.0",
+    "NODE_OPTIONS": "--max-old-space-size=4096"
+  },
+  "functions": {
+    "apps/web/app/api/trpc/[trpc]/route.ts": {
+      "maxDuration": 60
+    }
   }
 }
