Fix Vercel deployment: use pnpm workspace filtering and aggressive optimization settings

--- a/.npmrc
+++ b/.npmrc
@@ -4,7 +4,12 @@ strict-peer-dependencies=false
 shamefully-hoist=true
 node-linker=hoisted
 prefer-frozen-lockfile=true
-fetch-retries=3
+fetch-retries=5
 fetch-retry-mintimeout=20000
 fetch-retry-maxtimeout=120000
-fetch-timeout=300000
+fetch-timeout=600000
+network-concurrency=1
+child-concurrency=1
+prefer-offline=true
+verify-store-integrity=false
+package-import-method=copy
