--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
 {
-  "buildCommand": "pnpm turbo run build --filter=@moxmuse/web",
-  "installCommand": "pnpm install --frozen-lockfile --prefer-offline",
+  "buildCommand": "pnpm --filter=@moxmuse/web run build",
+  "installCommand": "pnpm install --filter=@moxmuse/web... --frozen-lockfile --config.dedupe-peer-dependents=false",
   "framework": null,
   "outputDirectory": "apps/web/.next",
   "ignoreCommand": "git diff HEAD^ HEAD --quiet .",
   "env": {
     "PNPM_VERSION": "8.14.0",
-    "NODE_OPTIONS": "--max-old-space-size=4096"
+    "NODE_OPTIONS": "--max-old-space-size=4096",
+    "VERCEL_BUILD_TIMEOUT": "45m"
   }
 }
