--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -57,7 +57,8 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
